fix tabs bug on mobile

--- a/main/components/Tabs/index.styl
+++ b/main/components/Tabs/index.styl
@@ -20,9 +20,11 @@ _red = #cc0000
 .arrow
   width 0
   height 0
-  border-left 8px solid transparent
-  border-right 8px solid transparent
-  border-bottom 8px solid #fff
+  border-left-width 1u
+  border-right-width 1u
+  border-color transparent
+  border-bottom-width 1u
+  border-bottom-color #fff
   position absolute
   bottom 0
   left 30%
